# dbdepartureinfo

./: Cargo.toml  README.md  stations.json
src/: app_state_controller.rs  data.rs  dbf_api.rs  delegate.rs  departure.rs  main.rs  message.rs  state.rs  state_controller.rs  station.rs  tests.rs  utils.rs  view.rs
