[package]
name = "dbdepartureinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "*", features = ["im"]}
reqwest = { version = "*", features = ["blocking"] }
tokio = { version = "*", features = ["full"] }
futures = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
